--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Hci-3</string>
+    <string name="error_message">Something went wrong: %1$s [%2$d]</string>
 </resources>
