--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,21 @@
 <resources>
     <string name="app_name">Hci-3</string>
     <string name="error_message">Something went wrong: %1$s [%2$d]</string>
+    <string-array name="fuente_calor">
+        <item>Convencional</item>
+        <item>Abajo</item>
+        <item>Arriba</item>
+    </string-array>
+    <string-array name="modo_grill">
+        <item>Apagado</item>
+        <item>Economico</item>
+        <item>Completo</item>
+    </string-array>
+    <string-array name="modo_conveccion">
+        <item>Apagado</item>
+        <item>Economico</item>
+        <item>Convencional</item>
+    </string-array>
     <string name="prendido">Prendido</string>
     <string name="apagado">Apagado</string>
     <string name="invalid_temp">Valor de temperatura invalido</string>
