Tarjeta de oven andando flama

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,6 +19,7 @@
     <string name="prendido">Prendido</string>
     <string name="apagado">Apagado</string>
     <string name="invalid_temp">Valor de temperatura invalido</string>
-    <string name="ac_temp"> %1$s°C </string>
-    <string name="ac_state">%1$s-%2$d°C</string>
+    <string name="temp"> %1$s°C </string>
+    <string name="temp_state">%1$s-%2$d°C</string>
+    <string name="disp_location">%1$s | %2$s</string>
 </resources>
