--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Hci-3</string>
+    <string name="app_name">SMARTIFY</string>
     <string name="error_message">Something went wrong: %1$s [%2$d]</string>
     <string-array name="fuente_calor">
         <item>Convencional</item>
@@ -22,4 +22,6 @@
     <string name="temp"> %1$s°C </string>
     <string name="temp_state">%1$s-%2$d°C</string>
     <string name="disp_location">%1$s | %2$s</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
