--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,8 +29,24 @@
     </string-array>
     <string name="prendido">Prendido</string>
     <string name="apagado">Apagado</string>
+    <string name="abierto">Abierto</string>
+    <string name="cerrado">Cerrado</string>
+    <string name="abierta">Abierta</string>
+    <string name="cerrada">Cerrada</string>
+    <string name="abrir">Abrir</string>
+    <string name="cerrar">Cerrar</string>
+    <string name="desbloqueada">Desbloqueada</string>
+    <string name="bloqueada">Bloqueada</string>
+    <string name="desbloquer">Desbloquear</string>
+    <string name="bloquear">Bloquear</string>
+    <string name="block_error">No se puede bloquear la puerta si esta abierta</string>
+    <string name="open_error">No se puede abrir la puerta si esta bloqueada</string>
     <string name="invalid_temp">Valor de temperatura invalido</string>
     <string name="temp"> %1$s°C </string>
+    <string name="state">%1$s</string>
+    <string name="door_state">%1$s - %2$s</string>
     <string name="temp_state">%1$s-%2$d°C</string>
     <string name="disp_location">%1$s | %2$s</string>
+    <string name="faucet_amount">%1$d %2$s</string>
+    <string name="dispense_error">El dispositivo ya esta dispensando</string>
 </resources>
