--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -47,12 +47,18 @@
     <string name="bloquear">Bloquear</string>
     <string name="block_error">No se puede bloquear la puerta si esta abierta</string>
     <string name="open_error">No se puede abrir la puerta si esta bloqueada</string>
+    <string name="blinds_open_error">La persiana ya esta abierta</string>
+    <string name="blinds_close_error">La persiana ya esta cerrada</string>
     <string name="invalid_temp">Valor de temperatura invalido</string>
     <string name="temp"> %1$s°C </string>
     <string name="state">%1$s</string>
     <string name="door_state">%1$s - %2$s</string>
     <string name="temp_state">%1$s-%2$d°C</string>
+    <string name="blinds_state">%1$s-%2$d</string>
     <string name="disp_location">%1$s | %2$s</string>
     <string name="faucet_amount">%1$d %2$s</string>
     <string name="dispense_error">El dispositivo ya esta dispensando</string>
+    <string name="blinds_level">%1$d</string>
+    <string name="abriendose">Abriendose</string>
+    <string name="cerrandose">Cerrandose</string>
 </resources>
