--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,7 +31,9 @@
         <item>pop</item>
         <item>country</item>
         <item>rock</item>
-        <item>kpop</item>
+        <item>classical</item>
+        <item>dance</item>
+        <item>latina</item>
     </string-array>
     <string name="prendido">Prendido</string>
     <string name="apagado">Apagado</string>
@@ -54,6 +56,10 @@
     <string name="state">%1$s</string>
     <string name="door_state">%1$s - %2$s</string>
     <string name="temp_state">%1$s-%2$d°C</string>
+    <string name="speaker_state">%1$s: %2$s</string>
+    <string name="reproduciendo">Reproduciendo</string>
+    <string name="pausado">Pausado</string>
+    <string name="parado">Apagado</string>
     <string name="blinds_state">%1$s-%2$d</string>
     <string name="disp_location">%1$s | %2$s</string>
     <string name="faucet_amount">%1$d %2$s</string>
@@ -61,4 +67,5 @@
     <string name="blinds_level">%1$d</string>
     <string name="abriendose">Abriendose</string>
     <string name="cerrandose">Cerrandose</string>
+    <string name="stopped_error">El parlante esta apagado, para reproducir musica debes prenderlo</string>
 </resources>
