--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -61,6 +61,7 @@
     <string name="pausado">Pausado</string>
     <string name="parado">Apagado</string>
     <string name="blinds_state">%1$s-%2$d</string>
+    <string name="batery_state">Bateria:%1$d</string>
     <string name="disp_location">%1$s | %2$s</string>
     <string name="faucet_amount">%1$d %2$s</string>
     <string name="dispense_error">El dispositivo ya esta dispensando</string>
@@ -68,4 +69,7 @@
     <string name="abriendose">Abriendose</string>
     <string name="cerrandose">Cerrandose</string>
     <string name="stopped_error">El parlante esta apagado, para reproducir musica debes prenderlo</string>
+    <string name="activa">Activa</string>
+    <string name="cargandose">Cargando</string>
+    <string name="apagada">Apagada</string>
 </resources>
