--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -53,6 +53,7 @@
     <string name="temp"> %1$s°C </string>
     <string name="state">%1$s</string>
     <string name="door_state">%1$s - %2$s</string>
+    <string name="lamp_state">%1s -</string>
     <string name="temp_state">%1$s-%2$d°C</string>
     <string name="blinds_state">%1$s-%2$d</string>
     <string name="disp_location">%1$s | %2$s</string>
