--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -106,4 +106,5 @@
         <item>Dance</item>
         <item>Latina</item>
     </string-array>
+    <string name="rutina_exitosa">The routine was executed correctly</string>
 </resources>
