--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -106,4 +106,5 @@
         <item>Dance</item>
         <item>Latina</item>
     </string-array>
+    <string name="rutina_exitosa">La rutina fue ejecutada correctamente</string>
 </resources>
