Navegacion y boton back, colorcito de iconos de bottom nav

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -71,6 +71,9 @@
     <string name="activa" translatable="false">Active</string>
     <string name="seleccione_hogar">"Choose home: "</string>
     <string name="habitacion">"Room: "</string>
+    <string name="favoritos">Favorites</string>
+    <string name="rutinas">Routines</string>
+    <string name="hogares">Homes</string>
 
     <string-array name="fuente_calor">
         <item>Conventional</item>
