--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -129,4 +129,7 @@
     <string name="cantidad">Cantidad</string>
     <string name="seleccione_hogar">Seleccione Hogar:</string>
     <string name="habitacion">Habitacion:</string>
+    <string name="favoritos">Favoritos</string>
+    <string name="rutinas">Rutinas</string>
+    <string name="hogares">Hogares</string>
 </resources>
