--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -57,7 +57,6 @@
     <string name="reproduciendo">Reproduciendo</string>
 
 
-
     <string name="temp" translatable="false"> %1$s°C </string>
     <string name="state" translatable="false">%1$s</string>
     <string name="door_state" translatable="false">%1$s - %2$s</string>
@@ -117,7 +116,7 @@
     <string name="previous">Boton cancion anterior</string>
     <string name="play">Boton de play y pausa</string>
     <string name="next">Boton cancion siguiente</string>
-    <string name="genero" >Genero:</string>
+    <string name="genero">Genero:</string>
     <string name="volumen">Volumen</string>
     <string name="oven">Imagen Horno</string>
     <string name="fuenteDeCalor">Fuente de calor:</string>
@@ -133,6 +132,11 @@
     <string name="rutinas">Rutinas</string>
     <string name="hogares">Hogares</string>
     <string name="rutina_exitosa">Rutina exitosa</string>
+    <string name="buscar">Buscar</string>
+    <string name="modoNocturno">Modo Nocturno</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="search">Busqueda: %1$s</string>
     <!--    <string name="sharedPreferences">com.example.hci_3.shared_preferences</string>-->
-<!--    <string name="notifications">notifications_key</string>-->
+    <!--    <string name="notifications">notifications_key</string>-->
 </resources>
