--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Hci-3</string>
+    <string name="app_name" translatable="false">Smartify</string>
     <string name="error_message">Algo salio mal: %1$s [%2$d]</string>
     <string-array name="fuente_calor">
         <item>Convencional</item>
@@ -129,6 +129,9 @@
     <string name="cantidad">Cantidad</string>
     <string name="seleccione_hogar">Seleccione Hogar:</string>
     <string name="habitacion">Habitacion:</string>
-<!--    <string name="sharedPreferences">com.example.hci_3.shared_preferences</string>-->
+    <string name="notifications_channel_name">Generales</string>
+    <string name="notifications_channel_description">Mensajes generales de la aplicacion</string>
+    <string name="channel_id" translatable="false">generalNotifications</string>
+    <!--    <string name="sharedPreferences">com.example.hci_3.shared_preferences</string>-->
 <!--    <string name="notifications">notifications_key</string>-->
 </resources>
