--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -114,4 +114,7 @@
     <string name="rutina_exitosa">The routine was executed correctly</string>
     <string name="notifications_channel_name">General</string>
     <string name="notifications_channel_description">General notifications for the app</string>
+    <string name="notifications_device_stated_changed">%1$s was modified, the actual value is %2$s</string>
+    <string name="notifications_device_added">%1$s was added.</string>
+    <string name="notifications_device_deleted">%1$s was deleted from the system.</string>
 </resources>
