--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -114,4 +114,7 @@
     <string name="notifications_channel_name">Generales</string>
     <string name="notifications_channel_description">Mensajes generales de la aplicacion</string>
     <string name="rutina_exitosa">La rutina fue ejecutada correctamente</string>
+    <string name="notifications_device_stated_changed">Se modifico %1$s, el valor actual es %2$s</string>
+    <string name="notifications_device_added">%1$s fue agregado.</string>
+    <string name="notifications_device_deleted">El dispositivo %1$s fue borrado</string>
 </resources>
