--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -130,7 +130,7 @@
     <string name="habitacion">Habitacion:</string>
     <string name="notifications_channel_name">Generales</string>
     <string name="notifications_channel_description">Mensajes generales de la aplicacion</string>
-    <string name="channel_id" translatable="false">generalNotifications</string>
+    <string name="notifications_standar_channel_ID" translatable="false">standarNotificationsChannelID</string>
     <!--    <string name="sharedPreferences">com.example.hci_3.shared_preferences</string>-->
 <!--    <string name="notifications">notifications_key</string>-->
     <string name="favoritos">Favoritos</string>
@@ -147,6 +147,7 @@
     <string name="notifications_device_stated_changed">Se modifico %1$s, el valor actual es %2$s</string>
     <string name="notifications_device_added">%1$s fue agregado.</string>
     <string name="notifications_device_deleted">El dispositivo %1$s fue borrado</string>
+    <string name="notifications_favorite_channel_ID" translatable="false">favoriteNorificationChannelID</string>
     <!--    <string name="sharedPreferences">com.example.hci_3.shared_preferences</string>-->
     <!--    <string name="notifications">notifications_key</string>-->
 </resources>
