--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -132,7 +132,7 @@
     <string name="notifications_channel_description">Mensajes generales de la aplicacion</string>
     <string name="channel_id" translatable="false">generalNotifications</string>
     <!--    <string name="sharedPreferences">com.example.hci_3.shared_preferences</string>-->
-<!--    <string name="notifications">notifications_key</string>-->
+    <!--    <string name="notifications">notifications_key</string>-->
     <string name="favoritos">Favoritos</string>
     <string name="rutinas">Rutinas</string>
     <string name="hogares">Hogares</string>
@@ -141,6 +141,9 @@
     <string name="modoNocturno">Modo Nocturno</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="search">Busqueda: %1$s</string>
+    <string name="ajustes">Ajustes</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
     <!--    <string name="sharedPreferences">com.example.hci_3.shared_preferences</string>-->
     <!--    <string name="notifications">notifications_key</string>-->
 </resources>
