Ahora spinner de home funciona piola

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -141,6 +141,7 @@
     <string name="modoNocturno">Modo Nocturno</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="search">Busqueda: %1$s</string>
+    <string name="spinner_invalid_home_name">El hogar seleccionado fue eliminado, o su nombre fue modificado</string>
     <!--    <string name="sharedPreferences">com.example.hci_3.shared_preferences</string>-->
     <!--    <string name="notifications">notifications_key</string>-->
 </resources>
