--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -114,4 +114,5 @@
     <string name="rutina_exitosa">The routine was executed correctly</string>
     <string name="notifications_channel_name">General</string>
     <string name="notifications_channel_description">General notifications for the app</string>
+    <string name="spinner_invalid_home_name">The home selected was removed, or it\'s name was changed</string>
 </resources>
