Primer mensaje de las notificaciones bien

--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -118,4 +118,29 @@
     <string name="notifications_device_stated_changed">Se modifico %1$s, el valor actual es %2$s</string>
     <string name="notifications_device_added">%1$s fue agregado.</string>
     <string name="notifications_device_deleted">El dispositivo %1$s fue borrado</string>
+    <string name="grill">Modo de grill</string>
+    <string name="heat">Modo de calor</string>
+    <string name="status">Estado</string>
+    <string name="mode">Modo</string>
+    <string name="temperature">Temperatura</string>
+    <string name="fanSpeed">Velocidad de ventilador</string>
+    <string name="horizontalSwing">Desplazamiento horizontal</string>
+    <string name="verticalSwing">Desplazamiento vertical</string>
+    <string name="level">Nivel máximo</string>
+    <string name="currentLevel">Nivel actual</string>
+    <string name="lock">Traba</string>
+    <string name="batteryLevel">Nivel de bateria</string>
+    <string name="quantity">Cantidad</string>
+    <string name="unit">Unidad</string>
+    <string name="dispensedQuantity">Cantidad dispensada</string>
+    <string name="color">Color</string>
+    <string name="brightness">Brillo</string>
+    <string name="convection">Conveccion</string>
+    <string name="genre">Genero</string>
+    <string name="volume">Volumen</string>
+    <string name="song">Canción</string>
+    <string name="name">Nombre</string>
+    <string name="meta.fav">Favorito</string>
+    <string name="room.name">Nombre de la habitacion</string>
+    <string name="room.home.name">Nombre del hogar</string>
 </resources>
