--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -143,4 +143,5 @@
     <string name="room.name">Room name</string>
     <string name="room.home.name">Home name</string>
     <string name="spinner_invalid_home_name">The home selected was removed, or it\'s name was changed</string>
+    <string name="invalid_vacuum_location">The room which the vacuum was assigned to was deleted. It will be assigned to it\'s room.</string>
 </resources>
