--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -51,7 +51,7 @@
     <string name="modo">Modo</string>
     <string name="desplazamiento_aspas">Desplazamiento de aspas</string>
     <string name="vertical">Vertical:</string>
-    <string name="auto">auto</string>
+    <string name="auto">Auto</string>
     <string name="horizontal">Horizontal:</string>
     <string name="velocidad_ventilador">Velocidad del ventilador:</string>
     <string name="speaker">Imagen de parlante</string>
@@ -77,7 +77,7 @@
     <string name="modoNocturno">Modo Nocturno</string>
     <string name="search">Busqueda: %1$s</string>
     <string name="ajustes">Ajustes</string>
-
+    <string name="dispensando">Dispensando %1$g</string>
     <string-array name="fuente_calor">
         <item>Convencional</item>
         <item>Abajo</item>
@@ -162,7 +162,7 @@
     <string name="unlocked">Desbloqueada</string>
     <string name="locked">Bloqueada</string>
     <string name="docked">Trapear</string>
-    <string name="inactive">Inacvtiva</string>
+    <string name="inactive">Inactiva</string>
     <string name="active">Activa</string>
     <string name="playing">Reproduciendo</string>
     <string name="paused">Pausado</string>
