--- a/app/src/main/res/values-night/strings.xml
+++ b/app/src/main/res/values-night/strings.xml
@@ -61,7 +61,7 @@
     <string name="state" translatable="false">%1$s</string>
     <string name="door_state" translatable="false">%1$s - %2$s</string>
     <string name="lamp_state" translatable="false">%1s -</string>
-    <string name="temp_state" translatable="false">%1$s-%2$d°C</string>
+    <string name="temp_state" translatable="false">%1$s - %2$s - %3$d°C</string>
     <string name="speaker_state" translatable="false">%1$s: %2$s</string>
     <string name="blinds_state" translatable="false">%1$s-%2$d</string>
     <string name="batery_state">Bateria: %1$d</string>
@@ -143,7 +143,6 @@
     <string name="search">Busqueda: %1$s</string>
     <string name="ajustes">Ajustes</string>
     <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="stored_devices_SP_key" translatable="false">storedDevicesSPKey</string>
     <string name="notification_IDs_SP_key" translatable="false">notificationsIDsSPKey</string>
     <string name="last_notification_ID" translatable="false">lastNotificationID</string>
