--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -62,7 +62,7 @@
     <string name="door_state" translatable="false">%1$s - %2$s</string>
     <string name="lamp_state" translatable="false">%1$s - </string>
     <string name="temp_state" translatable="false">%1$s - %2$s - %3$d°C</string>
-    <string name="room_title" translatable="false">%1$s - %2$s</string>
+    <string name="room_title" translatable="false">%1$s | %2$s</string>
 
     <string name="speaker_state" translatable="false">%1$s: %2$s</string>
     <string name="blinds_state" translatable="false">%1$s - %2$d</string>
