MEnsajes mas descriptivos

--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -115,7 +115,7 @@
     <string name="notifications_channel_name">Generales</string>
     <string name="notifications_channel_description">Mensajes generales de la aplicacion</string>
     <string name="rutina_exitosa">La rutina fue ejecutada correctamente</string>
-    <string name="notifications_device_stated_changed">Se modifico %1$s, el valor actual es %2$s</string>
+    <string name="notificactions_message_device_stated_changed">Se modifico %1$s, el valor actual es %2$s</string>
     <string name="notifications_device_added">%1$s fue agregado.</string>
     <string name="notifications_device_deleted">El dispositivo %1$s fue borrado</string>
     <string name="grill">Modo de grill</string>
@@ -182,4 +182,11 @@
     <string name="brillo">Brillo</string>
     <string name="routine_description">Tarjeta de rutina</string>
     <string name="current_color">Color actual</string>
+    <string name="notificactions_message_fav_true">El dispositivo fue agregado a favoritos</string>
+    <string name="notificactions_message_fav_false">El dispositivo fue removido de  favoritos</string>
+    <string name="notificactions_message_room.name">El dispositivo ahora se encuentra registrado en la habitacion %1$s</string>
+    <string name="notificactions_message_room.home.name">El dispositivo ahora se encuentra registrado en el hogar %1$s</string>
+    <string name="notificactions_message_name">El dispositivo cambio de nombre, ahora se llama %1$s</string>
+    <string name="notificactions_message_device.added">El dispositivo fue agregado y esta disponible para usar</string>
+    <string name="notificactions_message_device.deleted">El dispositivo fue eliminado del sistema</string>
 </resources>
