--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -115,7 +115,7 @@
     <string name="rutina_exitosa">The routine was executed correctly</string>
     <string name="notifications_channel_name">General</string>
     <string name="notifications_channel_description">General notifications for the app</string>
-    <string name="notifications_device_stated_changed">%1$s was modified, the actual value is %2$s</string>
+    <string name="notificactions_message_device_stated_changed">%1$s was modified, the actual value is %2$s</string>
     <string name="notifications_device_added">%1$s was added.</string>
     <string name="notifications_device_deleted">%1$s was deleted from the system.</string>
     <string name="grill">Grill</string>
@@ -182,4 +182,11 @@
     <string name="brillo">Brightness</string>
     <string name="routine_description">Routine\'s card</string>
     <string name="current_color">Current color</string>
+    <string name="notificactions_message_fav_true">The device was moved onto favorites list.</string>
+    <string name="notificactions_message_fav_false">The device is no loger on favorites list.</string>
+    <string name="notificactions_message_room.name">The device was moved to</string>
+    <string name="notificactions_message_room.home.name">The device was moved to</string>
+    <string name="notificactions_message_name">"The device name was changed to "</string>
+    <string name="notificactions_message_device.added">The device was added and is ready to use</string>
+    <string name="notificactions_message_device.deleted">The device was removed from the system</string>
 </resources>
