--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -232,6 +232,7 @@
     <string name="routine_description">Tarjeta de rutina</string>
     <string name="current_color">Color actual</string>
     <string name="percentage" translatable="false">(%)</string>
+    <string name="night_mode_boolean" translatable="false">NightModeBoolean</string>
     <!--    <string name="sharedPreferences">com.example.hci_3.shared_preferences</string>-->
     <!--    <string name="notifications">notifications_key</string>-->
 </resources>
